--- a/dashboard.css
+++ b/dashboard.css
@@ -133,6 +133,7 @@ body {
 .space {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
 }
 .spaces{
@@ -311,8 +312,8 @@ table {
 }
 .prodev{
   display: flex !important;
-  justify-content: center !important;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
 }
 .yess{
   color:#3365da !important;
@@ -415,8 +416,45 @@ table {
   display: flex;
   justify-content: start;
   align-items: center;
+  font-size: 50px;
+  color:#3365da;
+}
+.ai{
+  display: flex;
+  justify-content: start;
+  align-items: center;
   font-size: 40px;
   color:#3365da;
+ 
+}
+.aii{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 20px;
+  color:black;
+  gap:10px;
+}
+.aiii{
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  font-size: 15px;
+  color:gray;
+  font-weight: 100;
+ gap:5px;
+}
+.infotech{
+  display:flex;
+  flex-direction: column;
+  align-items: start;
+
+
+}
+
+.small-text{
+  font-size: medium;
+  font-weight: 100;
 }
 #main-table{
   height: 63vh;
