--- a/dashboard.css
+++ b/dashboard.css
@@ -94,6 +94,7 @@ body {
 .content {
   padding: 20px;
 }
+
 .hi {
   border: -4px solid rgba(255, 255, 255, 1);
 }
@@ -152,7 +153,7 @@ table {
 .table {
   width: 100%;
   border-collapse: collapse; /* Collapses the table borders */
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 .table th {
@@ -481,11 +482,20 @@ justify-content: space-between;
   font-size: 25px;
   color:white;
 }
+.a{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  font-size: 40px;
+  color:#3365da;
+}
 .xyz{
   display: flex;
   align-items: center;
 
 }
+
 .userdetails b{
   font-size: 25px !important;
   display: flex;
@@ -499,6 +509,9 @@ justify-content: space-between;
   
 
 }
+
+
+
 
 .ai{
   display: flex;
@@ -520,7 +533,47 @@ justify-content: space-between;
   font-size: 20px;
   color:#6c757d;
   gap:10px;
+}.filter-button {
+  background-color: black; /* Green background */
+  border: none; /* Remove default border */
+  color: white; /* White text */
+height:39px;
+width:61px;
+  text-align: center; /* Centered text */
+  text-decoration: none; /* Remove underline from text */
+  display: inline-block; /* Make it inline-block */
+  font-size: 16px; /* Font size */
+  margin: 10px 2px; /* Margin around the button */
+  cursor: pointer; /* Pointer cursor on hover */
+  border-radius: 8px; /* Rounded corners */
+  transition: background-color 0.3s; /* Smooth transition for background color */
 }
+
+/* Hover effect for the button */
+.filter-button:hover {
+  background-color: black; /* Slightly darker green on hover */
+}
+.date-input {
+  background-color: #f9f9f9; /* Light background color */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded corners */
+  padding: 10px; /* Padding inside the input */
+  font-size: 16px; /* Font size */
+  width: 148px; /* Width of the input */
+  height:39px;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.1); /* Inner shadow for depth */
+  transition: border-color 0.3s, box-shadow 0.3s; /* Smooth transitions for border and shadow */
+}
+
+
+/* Focus effect for the date input */
+.date-input:focus {
+  border-color: #4CAF50; /* Change border color on focus */
+  box-shadow: 0 0 5px rgba(0,0,0,0.2); /* Outer shadow on focus */
+  outline: none; /* Remove default focus outline */
+}
+/* Hover effect for the button */
+
 .aiii{
   display: flex;
   justify-content: end;
@@ -612,4 +665,5 @@ th{
 .qwe{
   display: flex;
   justify-content: end;
+
 }
