--- a/dashboard.css
+++ b/dashboard.css
@@ -1,24 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
-.navbar-item {
-  font-family: "Rubik", sans-serif !important;
-}
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
-.fonts {
-  font-family: "Rubik", sans-serif !important;
-  font-size: 50px;
-}
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
-.btn.added {
-  font-family: "Rubik", sans-serif !important;
-}
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
-
-.as {
-  font-family: "Rubik", sans-serif !important;
-}
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
-body {
-  font-family: "Rubik", sans-serif !important;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+body *{
+  font-family: "Montserrat", sans-serif !important;
 }
 /* styles.css */
 
@@ -49,7 +31,9 @@ body {
   font-size: 24px;
   margin-bottom: 20px;
 }
-
+.sidebar-img {
+    margin-right: 10px; /* Adjust this value as needed */
+}
 .sidebar-item {
   margin: 10px 0;
   font-size: 18px;
@@ -58,7 +42,8 @@ body {
 }
 
 .sidebar-item:hover {
-  background-color:#3365da;
+  background-color: rgba(231, 185, 0, 1);
+  ;
   padding: 10px;
   border-radius: 5px;
 }
@@ -66,7 +51,7 @@ body {
 /* Main content styles */
 .main-content {
   margin-left: 250px;
-  margin-top: 100px;
+  margin-top: 70px !important;
   background-color: #fff;
   overflow-y: auto;
 }
@@ -91,9 +76,9 @@ body {
 }
 
 /* Content area */
-.content {
+/* .content {
   padding: 20px;
-}
+} */
 
 .hi {
   border: -4px solid rgba(255, 255, 255, 1);
@@ -176,9 +161,6 @@ table {
   border-bottom: 1px solid #ddd; /* Remove border from the last row */
 }
 
-.table-striped tbody tr {
-  background-color: #fff; /* White background for all rows */
-}
 
 .main-content {
   padding: 20px;
@@ -291,7 +273,9 @@ table {
 
 .sidebar-item.active{
   border-radius: 10px 0 0px 10px !important;
-  background-color: #3365da;
+  background-color:rgba(231, 185, 0, 1);
+
+
 }
 
 .sidebar-item a{
@@ -302,7 +286,7 @@ table {
 }
 
 .sidebar-a:hover .sidebar-item, .sidebar-a.active .sidebar-item{
-  color: white !important;
+  color: black !important;
 }
 
 
@@ -342,6 +326,20 @@ table {
   margin-right:13px;
   font-size: 50px;
 }
+.firstlast{
+  color:rgb(75, 65, 65);
+  background-color:rgb(232,232,232) ;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  padding: 3px;
+  margin-right:13px;
+  font-size: 36px;
+  
+}
 .emails{
   font-size: 25px;
   display: flex;
@@ -369,12 +367,12 @@ justify-content: space-between;
   justify-content: end;
   margin-bottom:2%;
 }
-.userdetails {
-  font-family: Arial, sans-serif; /* Optional: Font style for the details */
+/* .userdetails {
+  font-family: Arial, sans-serif; 
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 
 .aaaa {
@@ -462,7 +460,9 @@ justify-content: space-between;
 .btn-outline-success:active {
   color: white; /* Text color on hover/focus/active */
 }
-
+.v-hr{
+  border-left: 1px solid #b5b5b5;
+}
 .sizing {
   width: 65% !important;
   height: 274px !important;
@@ -482,13 +482,23 @@ justify-content: space-between;
   font-size: 25px;
   color:white;
 }
+.ay{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 400;
+  color:black;
+}
+
 .a{
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
   font-size: 40px;
-  color:#3365da;
+  color:black;
 }
 .xyz{
   display: flex;
@@ -496,11 +506,11 @@ justify-content: space-between;
 
 }
 
-.userdetails b{
+/* .userdetails b{
   font-size: 25px !important;
   display: flex;
 }
-.userdetails{
+/* .userdetails{
   display: flex;
   flex-direction: column;
   justify-content: start !important;
@@ -508,18 +518,35 @@ justify-content: space-between;
   color:#6c757d;
   
 
+} */ 
+
+.spacebetween{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
-
-
-
+.atoz{
+  color: black;
+  font-size: 35px !important;
+}
+.usersss{
+  display: flex;
+  flex-direction: column;
+  justify-content: start !important;
+  align-items:start;
+}
+.atos{
+  font-size: 15px;
+  font-weight: 500;
+  
+}
 
 .ai{
   display: flex;
   justify-content: start;
   align-items: center;
   font-size: 40px;
-  color:#3365da;
- 
+  color:black !important; 
 }
 .startenddate{
   display: flex;
@@ -598,6 +625,7 @@ width:61px;
 #main-table{
   height: 63vh;
   overflow-y: auto;
+  margin-top:40px;
 }
 .yass{
   background-color:#ebecef;
