--- a/dashboard.css
+++ b/dashboard.css
@@ -40,7 +40,17 @@ body *{
   cursor: pointer;
 
 }
-
+.without_ampm::-webkit-datetime-edit-ampm-field {
+  display: none;
+}
+input[type=time]::-webkit-clear-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  -ms-appearance:none;
+  appearance: none;
+  margin: -10px; 
+}
 .sidebar-item:hover {
   background-color: rgba(231, 185, 0, 1);
   ;
